# coronacard

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  index.html  styles.css
arial/: Cargo.toml  build.rs
arial/src/: consts.rs  lib.rs  main.rs
data/: .gitignore  clean.py
examples/: svgpng.rs
learn/hello-world/: Cargo.toml
pdfimage/: Cargo.toml
pdfimage/src/: lib.rs
pkg/: coronacard_wasm.js  coronacard_wasm_bg.wasm
qrenc/: .gitignore  Cargo.toml
qrenc/examples/: svgparse.rs
qrenc/src/: lib.rs
src/: lib.rs  main.rs  print.rs  qrdecode.rs  qrencode.rs  svg.rs  vacc.rs
wasm/: .gitignore  Cargo.toml  README.md  index.js
wasm/src/: lib.rs
wasm/www/: index.html  index.js  styles.css
wasm/www2/: index.html  styles.css
www/: index.html  index.js  script.js
www/js/: script.js
xobject/: Cargo.toml
xobject/src/: main.rs
