[package]
name = "coronacard"
version = "0.1.3"
authors = ["Elias Kuthe <elias.kuthe@tu-dortmund.de>"]
license = "MIT"
edition = "2021"
exclude = ["/learn", "/data", "!/data/print.svg", "!/data/template.svg", ".gitmodules"]
repository = "https://github.com/EQt/coronacard"
description = "Format corona \"greencard\" information using an SVG template."

[features]
default = ["cli", "pdf"]
cli = ["clap"]
pdf = ["svg2pdf", "usvg", "fontdb", "arial"]

[dependencies]
xmltree = "0.10"
clap = { version = "3.0", default-features = false, features = ["color", "derive", "std"], optional = true }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
rqrr = { version = "0.4", default-features = false }
usvg = { version = "0.21", default-features = false, optional = true, features = ["text"] }

[dependencies.svg2pdf]
default-features = false
optional = true
git = "https://github.com/EQt/svg2pdf.git"
branch = "debug"
features = ["png"]

[dependencies.greenpass]
git = "https://github.com/mcilloni/greenpass.git"
default-features = false

[dependencies.fontdb]
version = "0.8"
optional = true
default-features = false

[dependencies.qrenc]
path = "qrenc"

[dependencies.arial]
path = "arial"
optional = true

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"

[workspace]
members = ["wasm", "arial", "qrenc"]

[[bin]]
name = "coronacard"
required-features = ["cli"]
