[package]
name = "coronacard"
version = "0.2.1"
authors = ["Elias Kuthe <elias.kuthe@tu-dortmund.de>"]
license = "MIT"
edition = "2021"
exclude = ["/data", "!/data/print.svg", "!/data/template.svg", ".gitmodules"]
repository = "https://github.com/EQt/coronacard"
description = "Generate card proving vaccination."

[features]
default = ["cli", "pdf"]
cli = ["clap"]
pdf = ["svg2pdf", "usvg", "fontdb", "arial"]

[dependencies]
xmltree = "0.10"
rqrr = { version = "0.5", default-features = false }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies.usvg]
version = "0.22"
default-features = false
optional = true
features = ["text"]

[dependencies.clap]
version = "3"
default-features = false
features = ["color", "derive", "std"]
optional = true

[dependencies.svg2pdf]
default-features = false
optional = true
git = "https://github.com/EQt/svg2pdf.git"
branch = "fix-trafos"
features = ["png"]

[dependencies.greenpass]
git = "https://github.com/mcilloni/greenpass.git"
default-features = false

[dependencies.fontdb]
version = "0.9"
optional = true
default-features = false

[dependencies.qrenc]
path = "qrenc"

[dependencies.arial]
path = "arial"
optional = true

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"

[workspace]
members = ["wasm", "arial", "qrenc"]

[[bin]]
name = "coronacard"
required-features = ["cli"]
