[package]
name = "qrenc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode-png = "0.2"
base64 = "0.13"

[dev-dependencies]
usvg = { version = "0.21", default-features = false }
image = { version = "0.23", features = ["png"], default-features = false }
miniz_oxide = { version = "0.4", default-features = false }
png = "0.16"
