[package]
name = "qrenc"
version = "0.1.2"
edition = "2021"

[dependencies]
qrcode-png = { version = "0.3" }
base64 = "0.13"

[dev-dependencies]
usvg = { version = "0.22", default-features = false }
image = { version = "0.24", features = ["png"], default-features = false }
miniz_oxide = { version = "0.5", default-features = false }
png = "0.17"
