[package]
name = "coronacard-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Elias Kuthe <elias.kuthe@tu-dortmund.de>"]
license = "MIT"
repository = "https://github.com/EQt/coronacard"
description = "WASM bindings to coronacard."

[dependencies]
wasm-bindgen = "0.2"
coronacard = { path = ".." }

[lib]
crate-type = ["cdylib"]
